# orbit

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile.worker  alembic.ini  pyproject.toml  seed.py
backend/app/: config.py  database.py  deps.py  main.py  worker.py
backend/app/models/: __init__.py  access.py  alert.py  allocation.py  document.py  entity.py  event.py  extraction.py  family.py  holding.py  performance.py  portfolio.py  price.py  security.py  user.py
backend/app/routers/: auth.py  dashboard.py  documents.py  entities.py  extractions.py  portfolios.py  ws.py
backend/app/schemas/: access.py  auth.py  dashboard.py  document.py  entity.py  extraction.py  opening_balance.py  portfolio.py
backend/app/services/: alerts.py  auth.py  events.py  projections.py  reconciliation.py  storage.py
backend/app/tasks/: __init__.py  _db.py  classify.py  extract.py  normalize.py  preprocess.py  price_feed.py  stage.py
backend/migrations/: env.py
backend/migrations/versions/: 0da793676103_add_projection_tables.py  3e24da44b626_add_day_change_pct_to_prices.py  45e1a89153bf_add_indexes_and_unique_constraint.py  4786fa28ed93_add_documents_staged_extractions.py  d4d4e9c2d605_initial_schema.py  eca10ea68da4_add_alerts_table.py
backend/tests/: conftest.py  test_access.py  test_alerts.py  test_auth.py  test_dashboard.py  test_entities.py  test_events.py  test_health.py  test_opening_balance.py  test_pipeline.py  test_portfolios.py  test_postmark.py  test_projections.py  test_reconciliation.py  test_review.py  test_storage.py  test_upload.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: sidebar.tsx  (+4 more)
(+26 files in other folders)
